tests/cases/compiler/newNonReferenceType.ts
// @target: es2015
var a = new any();
var b = new boolean(); // error
